# RBE-594-Capstone-Gear-Alignmentr

./: .bash_history  .gitignore  README.md  capstone  capstone.pub  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
RBE594_ws/src/sirgas_apriltag_detector/: package.xml  setup.cfg  setup.py
RBE594_ws/src/sirgas_apriltag_detector/launch/: apriltag_detector.launch.py  black_tag_detector.launch.py  black_tag_detector.launch_archived.py  tag_processing.launch.py
RBE594_ws/src/sirgas_apriltag_detector/sirgas_apriltag_detector/: apriltag_detector.py  black_tag_detector.py  black_tag_detector_archived.py  helpers.py  tag_axis_comparator.py  tag_pose_estimator.py
RBE594_ws/src/sirgas_description/: CMakeLists.txt  package.xml  setup.py  typescript
RBE594_ws/src/sirgas_description/config/: gear_coupling_controller.yaml  gsm_controller.yaml  initial_positions.yaml  load_controllers.sh  pba_controller.yaml  test.yaml  test2.yaml  ur20_starter_controllers.yaml
RBE594_ws/src/sirgas_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
RBE594_ws/src/sirgas_description/install/sirgas_description/share/sirgas_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh
RBE594_ws/src/sirgas_description/install/sirgas_description/share/sirgas_description/cmake/: sirgas_descriptionConfig-version.cmake  sirgas_descriptionConfig.cmake
RBE594_ws/src/sirgas_description/install/sirgas_description/share/sirgas_description/config/: gear_coupling_controller.yaml  load_controllers.sh  pba_controller.yaml  ur20_starter_controllers.yaml
RBE594_ws/src/sirgas_description/install/sirgas_description/share/sirgas_description/environment/: ament_prefix_path.dsv  path.dsv
RBE594_ws/src/sirgas_description/install/sirgas_description/share/sirgas_description/launch/: apriltag_detector.py  camera.launch.py  (+2 more)
RBE594_ws/src/sirgas_description/launch/: apriltag_detector.py  camera.launch.py  gr.launch.py  gripper.launch.py  pba.launch.py  pba.launch.xml  pba2.launch.py  sim.launch.py  sim2.launch.py  sim3.launch.py  sim4.launch.py  sim5.launch.py  sim6.launch.py  sim7.launch.py  ur20_starter.launch.py  ur20_starter_spawn.launch.py
RBE594_ws/src/sirgas_description/log/: latest_build
RBE594_ws/src/sirgas_description/meshes/: Assembly 1.stl  First_Gear.stl  Gear_Rotator.stl  Motor_Housing.stl  Peg_Board.stl  Second_Gear.stl  Starter_Gear.stl  Third_Gear.stl
RBE594_ws/src/sirgas_description/meshes/Apriltag36_11_00000/: model.config  model.sdf
RBE594_ws/src/sirgas_description/meshes/sim_cam/: model.sdf
RBE594_ws/src/sirgas_description/rviz/: camera.rviz  config.rviz  config2.rviz  gsm.rviz  ur20_view.rviz
RBE594_ws/src/sirgas_description/scripts/: gear_alignment_sim.py  grab_cube.py  grab_gear.py  grab_vcube.py  grab_vgears.py  move_panda.py  move_pba.py  move_to_gear.py
RBE594_ws/src/sirgas_description/urdf/: apriltag_panel.xacro  camera.urdf.xacro  camera2.urdf.xacro  camera_mount.urdf.xacro  cube.urdf.xacro  first_gear.urdf.xacro  gear_starter_motor.urdf.xacro  panda.urdf.xacro  panda_pba.urdf.xacro  pba.urdf.xacro  pba2.urdf.xacro  robotiq_arg85_description.urdf.xacro  second_gear.urdf.xacro  sim_cam.urdf.xacro  starter_gear.urdf.xacro  tag_1.urdf.xacro  third_gear.urdf.xacro  ur20.ros2_control.xacro  ur20_macro.xacro  ur20_pba.urdf.xacro  ur20_picker.urdf.xacro  ur20_starter.urdf.xacro  ur20_starter2.urdf.xacro
RBE594_ws/src/sirgas_description/urdf/inc/: apriltag_card.xacro
RBE594_ws/src/sirgas_description/worlds/: camera_world.sdf
RBE594_ws/src/test_ws/: .setup_assistant  CMakeLists.txt
RBE594_ws/src/test_ws/config/: initial_positions.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  panda_pba_robots.ros2_control.xacro  panda_pba_robots.srdf  panda_pba_robots.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
RBE594_ws/src/test_ws/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+2047 files in other folders)
